--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,10 @@
 <resources>
     <string name="app_name">EvyAlert</string>
     <string name="action_settings">Settings</string>
+    <string name="action_filters">Filters</string>
     <string name="facebook_app_id">892710704194179</string>
     <string name="fb_login_protocol_scheme" translatable="false">1166630520024561</string>
+    <string name="banner_ad_unit_id">ca-app-pub-6174292774814788/5577923159</string>
     <string name="login_ok">Login OK</string>
     <string name="login_cancel">Login CANCEL</string>
     <string name="need_login">Need login</string>
@@ -14,6 +16,7 @@
     <string name="profile">Profile</string>
     <string name="about">About</string>
     <string name="progressing">progressing…</string>
+    <string name="filter_events">Filter events</string>
 
     <string-array name="scope">
         <item>Near by 20 Km</item>
