--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">EvyAlert</string>
     <string name="action_settings">Settings</string>
     <string name="action_filters">Filters</string>
+    <string name="action_post">Post</string>
     <string name="facebook_app_id">892710704194179</string>
     <string name="fb_login_protocol_scheme" translatable="false">1166630520024561</string>
     <string name="banner_ad_unit_id_event_list">ca-app-pub-6174292774814788/7068002756</string>
@@ -18,10 +19,13 @@
     <string name="about">About</string>
     <string name="progressing">progressing…</string>
     <string name="filter_events">Filter events</string>
+    <string name="image_from_camera">Camera</string>
+    <string name="image_from_gallery">Gallery</string>
+    <string name="event_title">Title</string>
 
     <string-array name="scope">
-        <item>Near by 20 Km</item>
-        <item>Near by 50 Km</item>
+        <item>Around me in 20 Km</item>
+        <item>Around me in 50 Km</item>
         <item>Last 2 days</item>
         <item>Northern, last 2 days</item>
         <item>Northeastern, last 2 days</item>
@@ -122,10 +126,14 @@
         <item>Yala</item>
     </string-array>
 
+    <string name="event_accident">Accident</string>
+    <string name="event_natural_disaster">Natural Disaster</string>
+    <string name="event_other">Other</string>
+
     <string-array name="event_type">
-        <item>Accident</item>
-        <item>Natural Disaster</item>
-        <item>Other</item>
+        <item>@string/event_accident</item>
+        <item>@string/event_natural_disaster</item>
+        <item>@string/event_other</item>
     </string-array>
 
     <string name="title_activity_login">Login</string>
@@ -134,4 +142,5 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_activity_post_event">PostEventActivity</string>
 </resources>
