--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,10 +3,10 @@
     <string name="action_settings">Settings</string>
     <string name="action_filters">Filters</string>
     <string name="action_post">Post</string>
-    <string name="facebook_app_id">892710704194179</string>
+    <string name="facebook_app_id" translatable="false">892710704194179</string>
     <string name="fb_login_protocol_scheme" translatable="false">1166630520024561</string>
-    <string name="banner_ad_unit_id_event_list">ca-app-pub-6174292774814788/7068002756</string>
-    <string name="banner_ad_unit_id_intro">ca-app-pub-6174292774814788/5577923159</string>
+    <string name="banner_ad_unit_id_event_list" translatable="false">ca-app-pub-6174292774814788/7068002756</string>
+    <string name="banner_ad_unit_id_intro" translatable="false">ca-app-pub-6174292774814788/5577923159</string>
     <string name="login_ok">Login OK</string>
     <string name="login_cancel">Login CANCEL</string>
     <string name="need_login">Need login</string>
@@ -22,17 +22,29 @@
     <string name="image_from_camera">Camera</string>
     <string name="image_from_gallery">Gallery</string>
     <string name="event_title">Title</string>
+    <string name="default_event_title">Something happen here, be careful.</string>
+    <string name="must_select_at_last_1_type">Must select at last 1 type.</string>
+
+    <string name="around_me_20">Around me in 20 Km</string>
+    <string name="around_me_50">Around me in 50 Km</string>
+    <string name="last_2_day">Last 2 days</string>
 
     <string-array name="scope">
-        <item>Around me in 20 Km</item>
-        <item>Around me in 50 Km</item>
-        <item>Last 2 days</item>
-        <item>Northern, last 2 days</item>
-        <item>Northeastern, last 2 days</item>
-        <item>Central, last 2 days</item>
-        <item>Eastern, last 2 days</item>
-        <item>Southern, last 2 days</item>
+        <item>@string/around_me_20</item>
+        <item>@string/around_me_50</item>
+        <item>@string/last_2_day</item>
     </string-array>
+
+    <!--<string-array name="scope">-->
+        <!--<item>Around me in 20 Km</item>-->
+        <!--<item>Around me in 50 Km</item>-->
+        <!--<item>Last 2 days</item>-->
+        <!--<item>Northern, last 2 days</item>-->
+        <!--<item>Northeastern, last 2 days</item>-->
+        <!--<item>Central, last 2 days</item>-->
+        <!--<item>Eastern, last 2 days</item>-->
+        <!--<item>Southern, last 2 days</item>-->
+    <!--</string-array>-->
 
     <string-array name="scope_northern">
         <item>Chiang Mai</item>
@@ -137,10 +149,10 @@
     </string-array>
 
     <string name="title_activity_login">Login</string>
-    <string name="title_activity_main">EvyAlert</string>
-    <string name="section_format">Hello World from section: %1$d</string>
+    <string name="title_activity_main" translatable="false">EvyAlert</string>
+    <string name="section_format" translatable="false">Hello World from section: %1$d</string>
 
     <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="title_activity_post_event">PostEventActivity</string>
+    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
+    <string name="title_activity_post_event">Post Event</string>
 </resources>
