use province in app
province filter
province add

--- a/app/src/main/res/values-th/strings.xml
+++ b/app/src/main/res/values-th/strings.xml
@@ -31,4 +31,165 @@
     <string name="delete">ลบ</string>
     <string name="delete_confirm">ต้องการลบ?</string>
     <string name="later">ไว้ทีหลัง</string>
+    <string-array name="scope_new">
+        <item>รอบตัว ในระยะ 20 กิโลเมตร</item>
+        <item>รอบตัว ในระยะ 50 กิโลเมตร</item>
+        <item>2 วันที่ผ่านมา</item>
+        <item>อำนาจเจริญ</item>
+        <item>อ่างทอง</item>
+        <item>กรุงเทพมหานคร</item>
+        <item>บึงกาฬ</item>
+        <item>บุรีรัมย์</item>
+        <item>ฉะเชิงเทรา</item>
+        <item>ชัยนาท</item>
+        <item>ชัยภูมิ</item>
+        <item>จันทบุรี</item>
+        <item>เชียงราย</item>
+        <item>เชียงใหม่</item>
+        <item>ชลบุรี</item>
+        <item>ชุมพร</item>
+        <item>กาฬสินธุ์</item>
+        <item>กำแพงเพชร</item>
+        <item>กาญจนบุรี</item>
+        <item>ขอนแก่น</item>
+        <item>กระบี่</item>
+        <item>ลำปาง</item>
+        <item>ลำพูน</item>
+        <item>เลย</item>
+        <item>ลพบุรี</item>
+        <item>แม่ฮ่องสอน</item>
+        <item>มหาสารคาม</item>
+        <item>มุกดาหาร</item>
+        <item>นครนายก</item>
+        <item>นครปฐม</item>
+        <item>นครพนม</item>
+        <item>นครราชสีมา</item>
+        <item>นครสวรรค์</item>
+        <item>นครศรีธรรมราช</item>
+        <item>น่าน</item>
+        <item>นราธิวาส</item>
+        <item>หนองบัวลำภู</item>
+        <item>หนองคาย</item>
+        <item>นนทบุรี</item>
+        <item>ปทุมธานี</item>
+        <item>ปัตตานี</item>
+        <item>พังงา</item>
+        <item>พัทลุง</item>
+        <item>พะเยา</item>
+        <item>เพชรบูรณ์</item>
+        <item>เพชรบุรี</item>
+        <item>พิจิตร</item>
+        <item>พิษณุโลก</item>
+        <item>พระนครศรีอยุธยา</item>
+        <item>แพร่</item>
+        <item>ภูเก็ต</item>
+        <item>ปราจีนบุรี</item>
+        <item>ประจวบคีรีขันธ์</item>
+        <item>ระนอง</item>
+        <item>ราชบุรี</item>
+        <item>ระยอง</item>
+        <item>ร้อยเอ็ด</item>
+        <item>สระแก้ว</item>
+        <item>สกลนคร</item>
+        <item>สมุทรปราการ</item>
+        <item>สมุทรสาคร</item>
+        <item>สมุทรสงคราม</item>
+        <item>สระบุรี</item>
+        <item>สตูล</item>
+        <item>ศรีสะเกษ</item>
+        <item>สิงห์บุรี</item>
+        <item>สงขลา</item>
+        <item>สุโขทัย</item>
+        <item>สุพรรณบุรี</item>
+        <item>สุราษฎร์ธานี</item>
+        <item>สุรินทร์</item>
+        <item>ตาก</item>
+        <item>ตรัง</item>
+        <item>ตราด</item>
+        <item>อุบลราชธานี</item>
+        <item>อุดรธานี</item>
+        <item>อุทัยธานี</item>
+        <item>อุตรดิตถ์</item>
+        <item>ยะลา</item>
+        <item>ยโสธร</item>
+    </string-array>
+    <string-array name="province">
+        <item>อำนาจเจริญ</item>
+        <item>อ่างทอง</item>
+        <item>กรุงเทพมหานคร</item>
+        <item>บึงกาฬ</item>
+        <item>บุรีรัมย์</item>
+        <item>ฉะเชิงเทรา</item>
+        <item>ชัยนาท</item>
+        <item>ชัยภูมิ</item>
+        <item>จันทบุรี</item>
+        <item>เชียงราย</item>
+        <item>เชียงใหม่</item>
+        <item>ชลบุรี</item>
+        <item>ชุมพร</item>
+        <item>กาฬสินธุ์</item>
+        <item>กำแพงเพชร</item>
+        <item>กาญจนบุรี</item>
+        <item>ขอนแก่น</item>
+        <item>กระบี่</item>
+        <item>ลำปาง</item>
+        <item>ลำพูน</item>
+        <item>เลย</item>
+        <item>ลพบุรี</item>
+        <item>แม่ฮ่องสอน</item>
+        <item>มหาสารคาม</item>
+        <item>มุกดาหาร</item>
+        <item>นครนายก</item>
+        <item>นครปฐม</item>
+        <item>นครพนม</item>
+        <item>นครราชสีมา</item>
+        <item>นครสวรรค์</item>
+        <item>นครศรีธรรมราช</item>
+        <item>น่าน</item>
+        <item>นราธิวาส</item>
+        <item>หนองบัวลำภู</item>
+        <item>หนองคาย</item>
+        <item>นนทบุรี</item>
+        <item>ปทุมธานี</item>
+        <item>ปัตตานี</item>
+        <item>พังงา</item>
+        <item>พัทลุง</item>
+        <item>พะเยา</item>
+        <item>เพชรบูรณ์</item>
+        <item>เพชรบุรี</item>
+        <item>พิจิตร</item>
+        <item>พิษณุโลก</item>
+        <item>พระนครศรีอยุธยา</item>
+        <item>แพร่</item>
+        <item>ภูเก็ต</item>
+        <item>ปราจีนบุรี</item>
+        <item>ประจวบคีรีขันธ์</item>
+        <item>ระนอง</item>
+        <item>ราชบุรี</item>
+        <item>ระยอง</item>
+        <item>ร้อยเอ็ด</item>
+        <item>สระแก้ว</item>
+        <item>สกลนคร</item>
+        <item>สมุทรปราการ</item>
+        <item>สมุทรสาคร</item>
+        <item>สมุทรสงคราม</item>
+        <item>สระบุรี</item>
+        <item>สตูล</item>
+        <item>ศรีสะเกษ</item>
+        <item>สิงห์บุรี</item>
+        <item>สงขลา</item>
+        <item>สุโขทัย</item>
+        <item>สุพรรณบุรี</item>
+        <item>สุราษฎร์ธานี</item>
+        <item>สุรินทร์</item>
+        <item>ตาก</item>
+        <item>ตรัง</item>
+        <item>ตราด</item>
+        <item>อุบลราชธานี</item>
+        <item>อุดรธานี</item>
+        <item>อุทัยธานี</item>
+        <item>อุตรดิตถ์</item>
+        <item>ยะลา</item>
+        <item>ยโสธร</item>
+    </string-array>
 </resources>
