--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,11 +33,11 @@
     <string name="around_me_50">Around me in 50 Km</string>
     <string name="last_2_day">Last 2 days</string>
 
-    <string-array name="scope">
-        <item>@string/around_me_20</item>
-        <item>@string/around_me_50</item>
-        <item>@string/last_2_day</item>
-    </string-array>
+    <!--<string-array name="scope">-->
+        <!--<item>@string/around_me_20</item>-->
+        <!--<item>@string/around_me_50</item>-->
+        <!--<item>@string/last_2_day</item>-->
+    <!--</string-array>-->
 
     <!--<string-array name="scope">-->
         <!--<item>Around me in 20 Km</item>-->
@@ -49,6 +49,169 @@
         <!--<item>Eastern, last 2 days</item>-->
         <!--<item>Southern, last 2 days</item>-->
     <!--</string-array>-->
+
+    <string-array name="scope_new">
+        <item>Around me in 20 Km</item>
+        <item>Around me in 50 Km</item>
+        <item>Last 2 days</item>
+        <item>Amnat Charoen</item>
+        <item>Ang Thong</item>
+        <item>Bangkok</item>
+        <item>Bueng Kan</item>
+        <item>Buri Ram</item>
+        <item>Chachoengsao</item>
+        <item>Chainat</item>
+        <item>Chaiyaphum</item>
+        <item>Chanthaburi</item>
+        <item>Chiang Mai</item>
+        <item>Chiang Rai</item>
+        <item>Chon Buri</item>
+        <item>Chumphon</item>
+        <item>Kalasin</item>
+        <item>Kamphaeng Phet</item>
+        <item>Kanchanaburi</item>
+        <item>Khon Kaen</item>
+        <item>Krabi</item>
+        <item>Lampang</item>
+        <item>Lamphun</item>
+        <item>Loei</item>
+        <item>Lop Buri</item>
+        <item>Mae Hong Son</item>
+        <item>Maha Sarakham</item>
+        <item>Mukdahan</item>
+        <item>Nakhon Nayok</item>
+        <item>Nakhon Pathom</item>
+        <item>Nakhon Phanom</item>
+        <item>Nakhon Ratchasima</item>
+        <item>Nakhon Sawan</item>
+        <item>Nakhon Si Thammarat</item>
+        <item>Nan</item>
+        <item>Narathiwat</item>
+        <item>Nong Bua Lamphu</item>
+        <item>Nong Khai</item>
+        <item>Nonthaburi</item>
+        <item>Pathum Thani</item>
+        <item>Pattani</item>
+        <item>Phang Nga</item>
+        <item>Phatthalung</item>
+        <item>Phayao</item>
+        <item>Phetchabun</item>
+        <item>Phetchaburi</item>
+        <item>Phichit</item>
+        <item>Phitsanulok</item>
+        <item>Phra Nakhon Si Ayutthaya</item>
+        <item>Phrae</item>
+        <item>Phuket</item>
+        <item>Prachin Buri</item>
+        <item>Prachuap Khiri Khan</item>
+        <item>Ranong</item>
+        <item>Ratchaburi</item>
+        <item>Rayong</item>
+        <item>Roi Et</item>
+        <item>Sa Kaeo</item>
+        <item>Sakon Nakhon</item>
+        <item>Samut Prakan</item>
+        <item>Samut Sakhon</item>
+        <item>Samut Songkhram</item>
+        <item>Saraburi</item>
+        <item>Satun</item>
+        <item>Si Sa Ket</item>
+        <item>Sing Buri</item>
+        <item>Songkhla</item>
+        <item>Sukhothai</item>
+        <item>Suphan Buri</item>
+        <item>Surat Thani</item>
+        <item>Surin</item>
+        <item>Tak</item>
+        <item>Trang</item>
+        <item>Trat</item>
+        <item>Ubon Ratchathani</item>
+        <item>Udon Thani</item>
+        <item>Uthai Thani</item>
+        <item>Uttaradit</item>
+        <item>Yala</item>
+        <item>Yasothon</item>
+    </string-array>
+
+    <string-array name="province">
+        <item>Amnat Charoen</item>
+        <item>Ang Thong</item>
+        <item>Bangkok</item>
+        <item>Bueng Kan</item>
+        <item>Buri Ram</item>
+        <item>Chachoengsao</item>
+        <item>Chainat</item>
+        <item>Chaiyaphum</item>
+        <item>Chanthaburi</item>
+        <item>Chiang Mai</item>
+        <item>Chiang Rai</item>
+        <item>Chon Buri</item>
+        <item>Chumphon</item>
+        <item>Kalasin</item>
+        <item>Kamphaeng Phet</item>
+        <item>Kanchanaburi</item>
+        <item>Khon Kaen</item>
+        <item>Krabi</item>
+        <item>Lampang</item>
+        <item>Lamphun</item>
+        <item>Loei</item>
+        <item>Lop Buri</item>
+        <item>Mae Hong Son</item>
+        <item>Maha Sarakham</item>
+        <item>Mukdahan</item>
+        <item>Nakhon Nayok</item>
+        <item>Nakhon Pathom</item>
+        <item>Nakhon Phanom</item>
+        <item>Nakhon Ratchasima</item>
+        <item>Nakhon Sawan</item>
+        <item>Nakhon Si Thammarat</item>
+        <item>Nan</item>
+        <item>Narathiwat</item>
+        <item>Nong Bua Lamphu</item>
+        <item>Nong Khai</item>
+        <item>Nonthaburi</item>
+        <item>Pathum Thani</item>
+        <item>Pattani</item>
+        <item>Phang Nga</item>
+        <item>Phatthalung</item>
+        <item>Phayao</item>
+        <item>Phetchabun</item>
+        <item>Phetchaburi</item>
+        <item>Phichit</item>
+        <item>Phitsanulok</item>
+        <item>Phra Nakhon Si Ayutthaya</item>
+        <item>Phrae</item>
+        <item>Phuket</item>
+        <item>Prachin Buri</item>
+        <item>Prachuap Khiri Khan</item>
+        <item>Ranong</item>
+        <item>Ratchaburi</item>
+        <item>Rayong</item>
+        <item>Roi Et</item>
+        <item>Sa Kaeo</item>
+        <item>Sakon Nakhon</item>
+        <item>Samut Prakan</item>
+        <item>Samut Sakhon</item>
+        <item>Samut Songkhram</item>
+        <item>Saraburi</item>
+        <item>Satun</item>
+        <item>Si Sa Ket</item>
+        <item>Sing Buri</item>
+        <item>Songkhla</item>
+        <item>Sukhothai</item>
+        <item>Suphan Buri</item>
+        <item>Surat Thani</item>
+        <item>Surin</item>
+        <item>Tak</item>
+        <item>Trang</item>
+        <item>Trat</item>
+        <item>Ubon Ratchathani</item>
+        <item>Udon Thani</item>
+        <item>Uthai Thani</item>
+        <item>Uttaradit</item>
+        <item>Yala</item>
+        <item>Yasothon</item>
+    </string-array>
 
     <string-array name="scope_northern" translatable="false">
         <item>Chiang Mai</item>
