--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -327,5 +327,5 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
     <string name="title_activity_post_event">Post Event</string>
-    <string name="title_activity_event_comment">EventCommentActivity</string>
+    <string name="title_activity_event_comment">Comment</string>
 </resources>
