--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,7 +30,7 @@
     <string name="must_select_at_last_1_type">Must select at last 1 type.</string>
     <string name="wait_gps">Please, wait for GPS signal.</string>
     <string name="comment">Comment</string>
-    <string name="comment_with_number">Comment </string>
+    <string name="comment_with_number">Comment (%1$d)</string>
     <string name="too_far">%1$s is too far from current location.</string>
 
     <string name="around_me_20">Around me in 20 Km</string>
